--- a/Learning/pom.xml
+++ b/Learning/pom.xml
@@ -19,6 +19,16 @@
             <artifactId>kotlin-stdlib-jdk8</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
         <!--TEST-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
